@@ -25,6 +25,9 @@ Version 1.3.15+svn:
    * Fixed network game creation return back to create dialog after failed
      savegame loading
    * Fixed a small glitch with fog and shroud in the corners (bug #10831)
+   * share_view now looks at whether your allies have shared their view,
+     before whether or not you saw the view of your allies was determined by
+     your own view was shared (bug #10994)
  * miscellaneous and bug fixes:
    * Fixed networking not to timeout with slow connections but timeout faster
      with lost connection (partialy fix bug #10967)
